# repo-scanner

./: .coverage  CHANGELOG.md  Dockerfile  LICENSE  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  RELEASE.md  TestService.java  coverage.xml  deployment-20251223-224821.json  deployment-20251223-224906.json  docker-compose.yml  forensic_report.md  post-deployment-validation-report.md  production-go-live-announcement.md  production-monitoring-report-24h.md  project-final-closure.md  pyproject.toml  pytest.ini  readiness_assessment.json  readiness_assessment_final.json  scan_report.json  scan_report.md  test_batch_processing.py  test_component.js  tree.txt  verdict_report.md
.github/: costpilot-instructions.md
.scanner_cache/: file_hashes.json
analysis/: call_graph.json  symbol_index.csv
ci/: _hashes.txt  ci_validate.sh  verify_determinism.yml
config/: enterprise.toml
deployment/: build.sh  deploy.sh
docs/: README_ARCHITECTURE.md  TEST_PLAN.md  bounty-hunting-guide.md  checklist.md  deployment-validation-checklist.md  enterprise-deployment.md  feedback_template.txt  go-live-preparation.md  operational-handover.md  output_contract.md  performance-benchmarking.md  phase_ABC_report.md  phase_C_diffs.md  post-deployment-monitoring.md  product.yml  project-completion-summary.md  repo_report.md  rules-architecture.md  rules-checklist.md  rules-output.md  rules-safety.md  security-compliance.md  team-training-guide.md  workflow.md
enhanced_scanner/: README.md  baseline_assessment.py
final_test/: scan_report.json  scan_report.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  pod-security-policy.yaml  prometheus-rules.yaml  pvc.yaml  rbac.yaml  resource-limits.yaml  secret.yaml  service-monitor.yaml  service.yaml
monitoring/: grafana-dashboard.json
outputs/: scan_report.json  scan_report.md
outputs_ci/: scan_report.json
reports/: junit.xml
repository_intelligence_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: assess_operational_readiness.py  execute_production_deployment.py  generate_call_graph.py  load_test.py  performance_benchmark.py  validate_deployment.py  validate_deployment_comprehensive.py
src/: api_server.py  cli.py
test_governance/: scan_report.json  scan_report.md
test_semantic/: scan_report.json  scan_report.md
test_structural/: scan_report.json  scan_report.md
test_testing/: scan_report.json  scan_report.md
tests/: test_adversarial_property.py  test_bounty_integration.py  test_calibration_golden_repos.py  test_cross_platform.py  test_detectors_evidence_first.py  test_determinism.py  test_deterministic_provenance.py  test_evidence_normalization.py  test_integration_5nines.py  test_output_contract.py  test_output_schemas.py  test_performance.py  test_pipeline.py  test_pr_automation_unit.py  test_provenance_fields.py  test_repository_discovery.py  (+3 more)
(+241 files in other folders)
