[project]
name = "repository-intelligence-scanner"
version = "1.1.0"
description = "Decision-grade repository analysis system"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Repository Intelligence Scanner Team"},
]
maintainers = [
    {name = "Repository Intelligence Scanner Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
[project.urls]
Homepage = "https://github.com/example/repo-scanner"
Repository = "https://github.com/example/repo-scanner"
Documentation = "https://repo-scanner.readthedocs.io/"
Issues = "https://github.com/example/repo-scanner/issues"
dependencies = [
    "psutil>=5.9.0",
    "GitPython>=3.1.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.1",
]
ai = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "llama-cpp-python>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
repo-scanner = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
